[package]
name = "simple_backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1.0.193"
sqlx = { features = [ "runtime-tokio", "tls-rustls", "postgres", "macros" ] }
maud = { version = "0.25.0", features= ["actix-web"] }
actix-files = "0.6.2"

